--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -33,7 +33,7 @@
                   </p> <p><strong>Information Collection and Use</strong></p> <p>
                     For a better experience, while using our Service,
                     I may require you to provide us with certain
-                    personally identifiable information. The
+                    personally identifiable information, including but not limited to User Localisation. The
                     information that I request will be
                     retained on your device and is not collected by me in any way.
                   </p> <p>
